fisrt part added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A portfolpi</title>
+    <title>A portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span id="color">Sazal pramanik's</span> Website</h1>
+            <h3>A student's of North South University</h3>
+            <p>A student is a person who goes to school and is learning something. Students can be children, teenagers, or adults who are going to school, but it may also be other people who are learning, such as in college or university. A younger student is often called a pupil.</p>
+            <a class="hire-button" target="_blank" href="https://www.facebook.com/sazal.pramanik.3">Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/tom.jpg" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
