second part added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <section class="top-banner">
+    <section class="welcome-to">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span id="color">Sazal pramanik's</span> Website</h1>
@@ -22,6 +22,19 @@
         </div>
         <div class="half-width">
             <img src="images/tom.jpg" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/tom1.jpg" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1 id="another-dream">another Dream</h1>
+            <p>As a young child, my dream occupation was to dig up dinosaurs. As I grew older and my interests changed, my dream profession changed also. Although most of these dreams were not very long lived, one occupational dream has outlasted all others, and has finally emerged as the dream I passionately pursue.</p>
+            <a class="hire-button" target="_blank" href="https://www.foumovies.to/">Download Resume</a>
+            
         </div>
     </section>
 
