footer and exp added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     
 </head>
 <body>
-    <section class="welcome-to">
+    <section class="welcome-to flex-container">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span id="color">Sazal pramanik's</span> Website</h1>
+            <h1><span class="color">Sazal pramanik's</span> Website</h1>
             <h3>A student's of North South University</h3>
             <p>A student is a person who goes to school and is learning something. Students can be children, teenagers, or adults who are going to school, but it may also be other people who are learning, such as in college or university. A younger student is often called a pupil.</p>
             <a class="hire-button" target="_blank" href="https://www.facebook.com/sazal.pramanik.3">Hire me</a>
@@ -24,7 +24,7 @@
             <img src="images/tom.jpg" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flex-container">
         <div class="half-width">
             <img src="images/tom1.jpg" alt="">
         </div>
@@ -37,6 +37,24 @@
             
         </div>
     </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flex-container">
+            <div id="border-kaj-right" class="experience-item">
+                <h2 class="edit-font">Full stack web developer</h2>
+                <h2 class="color">2022-present | pro level developer</h2>
+                <p>A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS, he/she also knows how to: Program a browser (like using JavaScript, jQuery, Angular, or Vue) Program a server (like using PHP, ASP, Python, or Node)</p>
+            </div>
+            <div id="border-kaj-left" class="experience-item">
+                <h2 class="edit-font">Baby web developer</h2>
+                <h2 class="color">2021-2022 | lerner at programing hero</h2>
+                <p>First things first, web development is basically about linking things together. If you get how to link pages to each other, styles to pages and the database to your code, you have a fair knowledge of things. Therefore, try to understand things like how HTML pages are linked to the code in JavaScript or Python or PHP. Then, you have to understand the linking of CSS or bootstrap styles to the HTML pages. Finally, try to make out how all this ends up being connected to the database</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>Copyright © 2022 Programming-hero.com</p>
+    </footer>
 
 </body>
 </html>
